The Dynu DDNS service fully supports IPv6.

--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@ These sites use Dynamic Domain Name Services to allow servers that get
 a dynamically assigned IP Address to "check in" as the server for sets
 of virtual hosts.
 <p>
-The DuckDNS service I use currently (in 2024) only partially supports IPv6.  The service allows IPv6 addresses to be set but updates are accepted only from an IPv4 interface.  The DNS A records for IPv4 addresses and the DNS AAAA records for IPv6 addresses can be set to point to different servers.  Most dual stack implementations by default use an IPv6 if present for a domain name and revert to IPv4 communications only when IPv6 is not available.
+The Dynu DDNS service I started using in 2025 fully supports IPv6.  The DuckDNS service I was using in 2024 only partially supports IPv6.  The service allows IPv6 addresses to be set but updates are accepted only from an IPv4 interface.  The DNS A records for IPv4 addresses and the DNS AAAA records for IPv6 addresses can be set to point to different servers.  Most dual stack implementations by default use an IPv6 if present for a domain name and revert to IPv4 communications only when IPv6 is not available.
 
 <h2>
 <table><tr><td><span id="lamurakami">
