--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,13 @@ These sites use Dynamic Domain Name Services to allow servers that get
 a dynamically assigned IP Address to "check in" as the server for sets
 of virtual hosts.
 <p>
-The Dynu DDNS service I started using in 2025 fully supports IPv6.  The DuckDNS service I was using in 2024 only partially supports IPv6.  The service allows IPv6 addresses to be set but updates are accepted only from an IPv4 interface.  The DNS A records for IPv4 addresses and the DNS AAAA records for IPv6 addresses can be set to point to different servers.  Most dual stack implementations by default use an IPv6 if present for a domain name and revert to IPv4 communications only when IPv6 is not available.
+The Dynu DDNS service I started using in 2025 fully supports IPv6.
+The DuckDNS service I was using in 2024 only partially supports IPv6.
+The service allows IPv6 addresses to be set but updates are accepted only from an IPv4 interface.
+The DNS A records for IPv4 addresses and the DNS AAAA records for
+IPv6 addresses can be set to point to different servers.
+Most dual stack implementations by default use an IPv6 if present
+for a domain name and revert to IPv4 communications only when IPv6 is not available.
 
 <h2>
 <table><tr><td><span id="lamurakami">
@@ -25,7 +31,8 @@ The Dynu DDNS service I started using in 2025 fully supports IPv6.  The DuckDNS 
  - Linux Apache MariaDB in the cloud.
 </td></tr></table>
 </h2>
-This domain name points to the main server instance in my Virtual Private Cloud. For the foreseeable future this will be a dual stack instance with both IPv4 and IPv6 public internet addresses.
+This domain name points to the main server instance in my Virtual Private Cloud.
+For the foreseeable future this will be a dual stack instance with both IPv4 and IPv6 public internet addresses.
     <ul>
     <li><a href="https://sites.lamurakami.com/">    * https://sites.lamurakami.com  </a></li>
     <li><a href="https://z.lamurakami.com/">    * https://z.lamurakami.com  </a></li>
